tests/NormalTests/paczka1/fuzzy1/91515023.err
Error in line 2: 7UpyxhhvOM8 A40 88,9
Error in line 25: A859 A859 50,0
Error in line 14: oy6ke A40 34,9
Error in line 27: oy6ke S823 40,0
Error in line 31: iOj7j9u A859 66,4
Error in line 36: iOj7j9u A40 93,1
Error in line 38: iOj7j9u S823 60,5
